--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "dotenv-vscode",
-  "displayName": "Dotenv Official +Vault",
-  "description": "Official Dotenv. Syntax highlighting, auto-cloaking, auto-completion, in-code secret peeking, and optionally dotenv-vault.",
-  "author": "Mot @motdotla",
+  "name": "dotenv-vscode-stripped",
+  "displayName": "Dotenv (Stripped)",
+  "description": "A stripped down version of Dotenv with Auto-cloaking, auto-completion, in-code secret peeking, and more.",
+  "author": "@socheatsok78-lab",
   "version": "0.24.0",
   "license": "MIT",
-  "homepage": "https://github.com/dotenv-org/dotenv-vscode",
+  "homepage": "https://github.com/socheatsok78-lab/dotenv-vscode-stripped",
   "icon": "dotenv.png",
   "galleryBanner": {
     "color": "#ECD53F",
@@ -13,17 +13,17 @@
   },
   "qna": false,
   "bugs": {
-    "url": "https://github.com/dotenv-org/dotenv-vscode/issues"
+    "url": "https://github.com/socheatsok78-lab/dotenv-vscode-stripped/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dotenv-org/dotenv-vscode.git"
+    "url": "https://github.com/socheatsok78-lab/dotenv-vscode-stripped.git"
   },
   "engines": {
     "vscode": "^1.65.0"
   },
   "categories": [
-    "Languages",
+    "Programming Languages",
     "Formatters",
     "SCM Providers",
     "Other"
@@ -35,7 +35,7 @@
   "contributes": {
     "configuration": {
       "type": "object",
-      "title": "Dotenv Official +Vault",
+      "title": "Dotenv (Stripped)",
       "properties": {
         "dotenv.enableAutocloaking": {
           "scope": "resource",
@@ -51,30 +51,6 @@
         }
       }
     },
-    "viewsContainers": {
-      "activitybar": [
-        {
-          "id": "dotenv",
-          "title": "Dotenv",
-          "icon": "media/sidebar-icon.svg"
-        }
-      ]
-    },
-    "views": {
-      "dotenv": [
-        {
-          "id": "dotenv.view.vault",
-          "icon": "media/dotenv-icon.png",
-          "name": "Vault"
-        }
-      ]
-    },
-    "viewsWelcome": [
-      {
-        "view": "dotenv.view.vault",
-        "contents": "Getting Started with dotenv-vault [learn more](https://www.dotenv.org/docs/getting-started/with-dotenv-vault)\nStep 1: Create your project\n[Dotenv: new](command:dotenv.new)\nStep 2: Authenticate against it\n[Dotenv: login](command:dotenv.login)\nStep 3: View it\n[Dotenv: open](command:dotenv.open)\nThat's it! Thanks for using dotenv-vault.\n---\nCommands [learn more](https://www.dotenv.org/docs/dotenv-vault)\n[Dotenv: push](command:dotenv.push)\n[Dotenv: pull](command:dotenv.pull)\n[Dotenv: whoami](command:dotenv.whoami)\n[Dotenv: logout](command:dotenv.logout)\n[Dotenv: versions](command:dotenv.versions)\n[Dotenv: status](command:dotenv.status)\n\nProTip: You can run any of these commands by typing 'Ctrl+Shift+P', then 'Dotenv'."
-      }
-    ],
     "languages": [
       {
         "id": "dotenv",
@@ -91,8 +67,7 @@
           "cloak",
           "mask",
           "hide",
-          "blur",
-          "dotenv-vault"
+          "blur"
         ],
         "extensions": [
           ".env",
@@ -160,51 +135,6 @@
     ],
     "commands": [
       {
-        "command": "dotenv.login",
-        "category": "Dotenv",
-        "title": "login"
-      },
-      {
-        "command": "dotenv.logout",
-        "category": "Dotenv",
-        "title": "logout"
-      },
-      {
-        "command": "dotenv.new",
-        "category": "Dotenv",
-        "title": "new"
-      },
-      {
-        "command": "dotenv.open",
-        "category": "Dotenv",
-        "title": "open"
-      },
-      {
-        "command": "dotenv.pull",
-        "category": "Dotenv",
-        "title": "pull"
-      },
-      {
-        "command": "dotenv.push",
-        "category": "Dotenv",
-        "title": "push"
-      },
-      {
-        "command": "dotenv.status",
-        "category": "Dotenv",
-        "title": "status"
-      },
-      {
-        "command": "dotenv.versions",
-        "category": "Dotenv",
-        "title": "versions"
-      },
-      {
-        "command": "dotenv.whoami",
-        "category": "Dotenv",
-        "title": "whoami"
-      },
-      {
         "command": "dotenv.toggleAutocloaking",
         "category": "Dotenv",
         "title": "Toggle auto-cloaking"
@@ -220,7 +150,7 @@
     "login": "vsce login",
     "publish": "npm install && npm run lint && vsce package && vsce publish"
   },
-  "publisher": "dotenv",
+  "publisher": "socheatsok78-lab",
   "devDependencies": {
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.1",
